[package]
name = "MQTTy"
authors = ["Oscar Pernia <oscarperniamoreno@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_5"]}
async-channel = "2.3.1"
derive_builder = "0.20.2"
futures = "0.3.31"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_46"] }
paho = { version = "0.13.2", package = "paho-mqtt" }
tracing = "0.1.37"
tracing-subscriber = "0.3"
