[package]
name = "MQTTy"
authors = ["Oscar Pernia <oscarperniamoreno@gmail.com>"]
edition = "2021"
version = "0.1.4"

[profile.release]
lto = true

[dependencies]
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_6"]}
async-channel = "2.3.1"
base64 = "0.22.1"
chrono = "0.4.41"
derive_builder = "0.20.2"
directories = "6.0.0"
formatx = "0.2.3"
futures = "0.3.31"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_46"] }
hex = "0.4.3"
paho = { version = "0.13.2", package = "paho-mqtt" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sourceview = { version = "0.9.1", package = "sourceview5" }
tracing = "0.1.37"
tracing-subscriber = "0.3"

[build-dependencies]
winresource = "0.1.20"
